# slint-meteo-gui

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: connector.rs  database.rs  main.rs  model.rs  ui.rs  video.rs
ui/: appwindow.slint  barchart_widget.slint  daygraph_widget.slint  indoor_widget.slint  space_weather_widget.slint  theme.slint  video_widget.slint
