[package]
name = "slint-gui"
version = "0.4.0"
authors = ["TEPO <tepotpoh@gmail.com>"]
edition = "2021"
build = "build.rs"

[dependencies]
# set suitable backend and renderer from
# https://releases.slint.dev/1.6.0/docs/slint/src/advanced/backends_and_renderers
slint = { version = "<=1.7.2", default-features = false, features = ["std", "compat-1-2", @BACKEND_TYPE@, @RENDER_TYPE@] }
rumqttc = "0.23.0"
json = "0.12.4"
envconfig = "0.10.0"
chrono = "0.4"
# for gstreamer
anyhow = { version = "1.0" }
gst = {package = "gstreamer", version = "0.21.3"}
gst-video = {package = "gstreamer-video", version = "0.21.2" }
gst-app = {package = "gstreamer-app", version = "0.21.2" }

[build-dependencies]
slint-build = "1.6"
